--- a/templates/search.html
+++ b/templates/search.html
@@ -2,7 +2,7 @@
 {% block title %}Booksstore{% endblock %}
 
 {% block body %}
-<h3>Display Radio Buttons</h3>
+<h3>Search Books</h3>
 <form  action="/searching" method="POST">
     <fieldset class="box">
         <input type="text" id="search_text" name="search"><br><br>
