--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -22,9 +22,9 @@
     <p>
       <button type="submit" class="registerbtn">Register</button>
       </p>
-      <p>Already have an account? <a href="#">Sign in</a>.</p>
+      
     </form>
-  
+    <p>Already have an account? <a href="/login">Sign in</a>.</p> 
     
     
   {% endblock %}
