modified server.py, templates/cart.html,templates/search.html

--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block title %}Booksstore{% endblock %}
 
-{% block body %}
+{% extends 'base.html' %}
+{% block title %}Booksstore{% endblock %}
 <h3>Search Books</h3>
 <form  action="/searching" method="POST">
     <fieldset class="box">
