--- a/templates/search.html
+++ b/templates/search.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Booksstore{% endblock %}
 
-{% extends 'base.html' %}
 {% block title %}Booksstore{% endblock %}
+{% block body %}
 <h3>Search Books</h3>
 <form  action="/searching" method="POST">
     <fieldset class="box">
@@ -17,8 +16,6 @@
         <input type="submit" value="Submit">
     </div>
 
-        </form>
+    </form>
         
-    
-
-        {% endblock %}
+    {% endblock %}
