modified server,crud, logout

--- a/templates/Homepage.html
+++ b/templates/Homepage.html
@@ -5,7 +5,7 @@
 <h1>Welcome to Online BookStore</h1>
   <h2>Register</h2>
   <p>Please fill in this form to create an account.</p>
-  <form action="/login" method="POST">
+  <form action="/users" method="POST">
     <p>
         First Name <input type= "text" name = "FirstName">
     </p>
