--- a/templates/all_books.html
+++ b/templates/all_books.html
@@ -10,4 +10,7 @@
 
 {% endfor %}
 </ul>
+<form action='/logout'>
+  <button type='submit' id='logout'>Log out</button>
+</form>
 {% endblock body %}
