--- a/templates/all_books.html
+++ b/templates/all_books.html
@@ -1,28 +1,87 @@
+{% extends 'base.html' %}
+{% block title %}All Books{% endblock %}
+
 {% block body %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/books">BookStore</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search">Search Books</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cart">Cart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/purchase_history">Purchase History</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0" action="/logout">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" action="/logout">Logout</button>
+    </form>
+  </div>
+</nav>
 
-<h1>  Books </h1>
-<ul>
-{% for book in books %}
-  <li><a href="/books/{{ book.book_id }}">
-    {{ book.title }}
-  </a></li>
-
-
-{% endfor %}
-</ul>
-
-<h3>Top rated books</h3>
-<ul>
-  {% for book in top_books %}
-    <li><a href="/books/{{ book.book_id }}">
-      {{ book.title }}
-    </a></li>
-  
-  
-  {% endfor %}
-  </ul>
-
-<form action='/logout'>
-  <button type='submit' id='logout'>Log out</button>
-</form>
+<div class="container h-100">
+  <div class="row align-items-center h-100">
+      <div class="col-6 mx-auto">
+          <div style="display: flex; align-items: center;">
+            <form>
+              <h3>Top 5 Rated Books</h3>
+              <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Author</th>
+                    <th scope="col">Genre</th>
+                  </tr>
+                </thead>
+                <tbody> 
+                  {% for book in top_books %}
+                  <tr>
+                    <th scope="row">{{loop.index}}</th>
+                    <td><a href="/books/{{ book.book_id }}">
+                      {{ book.title }}
+                      </a></td>
+                      <td>{{authors[loop.index - 1]}}</td>
+                      <td>{{book.genre}}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+                <h1>All Books</h1>
+                <table class="table">
+                  <thead class="thead-dark">
+                    <tr>
+                      <th scope="col">#</th>
+                      <th scope="col">Title</th>
+                      <th scope="col">Author</th>
+                      <th scope="col">Genre</th>
+                    </tr>
+                  </thead>
+                  <tbody> 
+                    {% for book in books %}
+                    <tr>
+                      <th scope="row">{{loop.index}}</th>
+                      <td><a href="/books/{{ book.book_id }}">
+                        {{ book.title }}
+                        </a></td>
+                        <td>{{all_authors[loop.index - 1]}}</td>
+                        <td>{{book.genre}}</td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+                </form>
+          </div>
+      </div>
+  </div>
+</div>
 {% endblock body %}
