--- a/templates/no_results.html
+++ b/templates/no_results.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-
-{% block title %}{{book.title }} - Details{% endblock %}
+{% block title %}All Books{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -33,22 +32,13 @@
   <div class="row align-items-center h-100">
       <div class="col-6 mx-auto">
           <div style="display: flex; align-items: center;">
-            <div class="card" style="width: 30rem;">
-              <div class="card-header">
-                <h3>{{book.title}}</h3>
-              </div>
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">Genre: {{book.genre}}</li>
-                <li class="list-group-item">Price: ${{book.price}}</li>
-                <li class="list-group-item">Rating: {{rating}}</li>
-                <li class="list-group-item">
-                  <form action='/add_to_cart' method='POST'>
-                    <input type='text' id='quantity' name='quantity'><br><br>
-                    <button class="btn btn-success" name="book_id" type="submit" value={{book.book_id}}>Add to Cart</button>
-                  </form>
-                </li>
-              </ul>
-            </div>
+            <form>
+                <h1>Search Results</h1>
+                <div class="alert alert-danger" role="alert">
+                    No results by that keywords.
+                    <h3><a href="/search" class="badge badge-success">Back To Search</a></h3>
+                  </div>
+            </form>
           </div>
       </div>
   </div>
