--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -1,16 +1,66 @@
-{% block body %}
+{% extends 'base.html' %}
+{% block title %}Purchase History{% endblock %}
 
-<h1>{{user_info}}'s Confirm Purchase</h1>
-<ul>
-{% for book in display_cart %}
-  <li>
-      <h3>{{ display_cart[book]}}</h3>
-      <p>Price:${{display_cart[book].total}}</p>
-    </li>
-{% endfor %}
-</ul>
-<h3>Total purchase price: ${{total}}</h3>
-<form action='/purchase' method='POST'>
-    <button name="book_id" type="submit" value='purchase'>Purchase Books</button>
-  </form>
+{% block body %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/books">BookStore</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search">Search Books</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cart">Cart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/purchase_history">Purchase History</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0" action="/logout">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" action="/logout">Logout</button>
+    </form>
+  </div>
+</nav>
+
+<div class="container h-100">
+  <div class="row align-items-center h-100">
+      <div class="col-6 mx-auto">
+          <div style="display: flex; align-items: center;">
+            <form>
+              <h2>{{user_info}}'s Confirm Purchase</h2>
+              <table class="table">
+                <thead class="thead-dark">
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Title</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Total</th>
+                  </tr>
+                </thead>
+                <tbody> 
+                  {% for book in display_cart %}
+                  <tr>
+                    <th scope="row">{{loop.index}}</th>
+                    <td><a href="/books/{{ display_cart[book].book_id }}">
+                      {{ display_cart[book].title }}
+                      </a></td>
+                      <td>{{display_cart[book].quantity}}</td>
+                      <td>${{display_cart[book].total}}</td>
+                    </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+              <h3>Total purchase price: ${{total}}</h3>
+              </form>
+          </div>
+      </div>
+  </div>
+</div>
+
 {% endblock body %}
