--- a/templates/rating.html
+++ b/templates/rating.html
@@ -1,25 +1,39 @@
-{% block body %}
+{% extends 'base.html' %}
+{% block title %}All Books{% endblock %}
 
-<h1>{{user_info}}'s Rate Purchased Books</h1>
-<ul>
-{% for book in display_cart %}
-  <li>
-      <h3>{{ display_cart[book]}}</h3>
-      <p>Price:${{display_cart[book].total}}</p>
-      <form action="/add_rating" method="POST">
-        <select name="rating" id="rating">
-            <option value="1">1</option>
-            <option value="3">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-          </select>
-        <button id='adding_rating' name="book_id" type="submit" value='{{display_cart[book].book_id}}'>Rating</button>
-      </form>
-    </li>
-{% endfor %}
-</ul>
-<form action='/logout'>
-  <button type='submit' id='logout'>Log out</button>
-</form>
+{% block body %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/books">BookStore</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/search">Search Books</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cart">Cart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/purchase_history">Purchase History</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0" action="/logout">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" action="/logout">Logout</button>
+    </form>
+  </div>
+</nav>
+<div class="container h-100">
+  <div class="row align-items-center h-100">
+      <div class="col-6 mx-auto">
+          <div style="display: flex; align-items: center;">
+
+          </div>
+      </div>
+  </div>
+</div>
 {% endblock body %}
