--- a/templates/all_books.html
+++ b/templates/all_books.html
@@ -21,6 +21,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/purchase_history">Purchase History</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/rating">Rate Books</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/logout">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit" action="/logout">Logout</button>
@@ -41,6 +44,7 @@
                     <th scope="col">Title</th>
                     <th scope="col">Author</th>
                     <th scope="col">Genre</th>
+                    <th scope="col">Rating</th>
                   </tr>
                 </thead>
                 <tbody> 
@@ -52,6 +56,7 @@
                       </a></td>
                       <td>{{authors[loop.index - 1]}}</td>
                       <td>{{book.genre}}</td>
+                      <td>{{top_ratings[loop.index - 1]}}</td>
                     </tr>
                   {% endfor %}
                 </tbody>
