--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -22,6 +22,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/purchase_history">Purchase History</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/rating">Rate Books</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/logout">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit" action="/logout">Logout</button>
