--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{{user_info }} - Details{% endblock %}
+{% block title %}{{user_info }} - Cart Details{% endblock %}
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/books">BookStore</a>
@@ -20,6 +20,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/purchase_history">Purchase History</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/rating">Rate Books</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/logout">
