--- a/templates/no_results.html
+++ b/templates/no_results.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}All Books{% endblock %}
+{% block title %}No Result - Search{% endblock %}
 
 {% block body %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -20,6 +20,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/purchase_history">Purchase History</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/rating">Rate Books</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0" action="/logout">
