--- a/templates/book_details.html
+++ b/templates/book_details.html
@@ -11,7 +11,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/books">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/search">Search Books</a>
@@ -32,13 +32,15 @@
   </div>
 </nav>
 
+
 <div class="container h-100">
   <div class="row align-items-center h-100">
       <div class="col-6 mx-auto">
           <div style="display: flex; align-items: center;">
             <div class="card" style="width: 30rem;">
-              <div class="card-header">
-                <h3>{{book.title}}</h3>
+              <img class="card-img-top" src="{{ url_for('static', filename=book.image) }}" alt="Card image cap">
+              <div class="card-body">
+                <h5 class="card-title">{{book.title}}</h5>
               </div>
               <ul class="list-group list-group-flush">
                 <li class="list-group-item">Genre: {{book.genre}}</li>
