--- a/templates/rating.html
+++ b/templates/rating.html
@@ -10,7 +10,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/books">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/search">Search Books</a>
@@ -35,7 +35,7 @@
   <div class="row align-items-center h-100">
       <div class="col-6 mx-auto">
           <div style="display: flex; align-items: center;">
-            <form>
+            <div>
               <h2>{{user_info}}'s Rate Purchased Books</h2>
               <table class="table">
                 <thead class="thead-dark">
@@ -69,7 +69,7 @@
                 </tbody>
               </table>
               <h3>Total purchase price: ${{total}}</h3>
-              </form>
+            </div>
           </div>
       </div>
   </div>
